// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardSkeleton Component Snapshot Tests DashboardSkeleton matches snapshot 1`] = `
<div
  class="space-y-6 "
>
  <div
    class="space-y-2"
  >
    <div
      class="h-9 bg-gray-200 rounded w-64 loading-shimmer"
    />
    <div
      class="h-5 bg-gray-200 rounded w-96 loading-shimmer"
    />
  </div>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"
  >
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex justify-end"
  >
    <div
      class="inline-flex rounded-md shadow-sm animate-pulse"
      role="group"
    >
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer rounded-l-md"
      />
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer "
      />
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer "
      />
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer rounded-r-md"
      />
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-2 gap-6"
  >
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse "
    >
      <div
        class="mb-4"
      >
        <div
          class="h-6 bg-gray-200 rounded w-1/3 loading-shimmer"
        />
      </div>
      <div
        class="bg-gradient-to-r from-gray-200 via-gray-100 to-gray-200 rounded-lg loading-shimmer"
        style="height: 300px;"
      >
        <div
          class="h-full flex items-end justify-around p-4 space-x-2"
        >
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 30%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 60%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 45%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 75%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 40%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 55%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 35%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 65%; width: 12px;"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse "
    >
      <div
        class="mb-4"
      >
        <div
          class="h-6 bg-gray-200 rounded w-1/3 loading-shimmer"
        />
      </div>
      <div
        class="bg-gradient-to-r from-gray-200 via-gray-100 to-gray-200 rounded-lg loading-shimmer"
        style="height: 300px;"
      >
        <div
          class="h-full flex items-end justify-around p-4 space-x-2"
        >
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 30%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 60%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 45%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 75%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 40%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 55%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 35%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 65%; width: 12px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="animate-pulse"
  >
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse "
    >
      <div
        class="mb-4"
      >
        <div
          class="h-6 bg-gray-200 rounded w-1/3 loading-shimmer"
        />
      </div>
      <div
        class="bg-gradient-to-r from-gray-200 via-gray-100 to-gray-200 rounded-lg loading-shimmer"
        style="height: 300px;"
      >
        <div
          class="h-full flex items-end justify-around p-4 space-x-2"
        >
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 30%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 60%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 45%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 75%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 40%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 55%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 35%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 65%; width: 12px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="bg-white rounded-lg shadow animate-pulse"
      >
        <div
          class="px-6 py-4 border-b border-gray-200"
        >
          <div
            class="h-6 bg-gray-200 rounded w-48 loading-shimmer"
          />
        </div>
        <div
          class="p-6 space-y-4"
        >
          <div
            class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
              />
              <div
                class="h-3 bg-gray-200 rounded w-1/2 loading-shimmer"
              />
            </div>
            <div
              class="h-6 bg-gray-200 rounded-full w-16 loading-shimmer"
            />
          </div>
          <div
            class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
              />
              <div
                class="h-3 bg-gray-200 rounded w-1/2 loading-shimmer"
              />
            </div>
            <div
              class="h-6 bg-gray-200 rounded-full w-16 loading-shimmer"
            />
          </div>
          <div
            class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
              />
              <div
                class="h-3 bg-gray-200 rounded w-1/2 loading-shimmer"
              />
            </div>
            <div
              class="h-6 bg-gray-200 rounded-full w-16 loading-shimmer"
            />
          </div>
          <div
            class="pt-4 border-t border-gray-200"
          >
            <div
              class="h-4 bg-gray-200 rounded w-40 loading-shimmer"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="bg-white rounded-lg shadow animate-pulse"
      >
        <div
          class="px-6 py-4 border-b border-gray-200"
        >
          <div
            class="h-6 bg-gray-200 rounded w-20 loading-shimmer"
          />
        </div>
        <div
          class="p-6 space-y-4"
        >
          <div
            class="bg-blue-50 border border-blue-200 rounded-lg p-4 animate-pulse "
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-6 h-6 bg-gray-200 rounded-full flex-shrink-0 loading-shimmer"
              />
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="h-4 bg-gray-200 rounded w-full loading-shimmer"
                />
                <div
                  class="h-3 bg-gray-200 rounded w-3/4 loading-shimmer"
                />
              </div>
            </div>
          </div>
          <div
            class="bg-blue-50 border border-blue-200 rounded-lg p-4 animate-pulse "
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-6 h-6 bg-gray-200 rounded-full flex-shrink-0 loading-shimmer"
              />
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="h-4 bg-gray-200 rounded w-full loading-shimmer"
                />
                <div
                  class="h-3 bg-gray-200 rounded w-3/4 loading-shimmer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardSkeleton Component Snapshot Tests DashboardSkeleton with custom className matches snapshot 1`] = `
<div
  class="space-y-6 custom-class"
>
  <div
    class="space-y-2"
  >
    <div
      class="h-9 bg-gray-200 rounded w-64 loading-shimmer"
    />
    <div
      class="h-5 bg-gray-200 rounded w-96 loading-shimmer"
    />
  </div>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"
  >
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="w-8 h-8 bg-gray-200 rounded loading-shimmer"
          />
        </div>
        <div
          class="ml-4 flex-1 space-y-2"
        >
          <div
            class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
          />
          <div
            class="h-7 bg-gray-200 rounded w-1/2 loading-shimmer"
          />
          <div
            class="h-3 bg-gray-200 rounded w-full loading-shimmer"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex justify-end"
  >
    <div
      class="inline-flex rounded-md shadow-sm animate-pulse"
      role="group"
    >
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer rounded-l-md"
      />
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer "
      />
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer "
      />
      <div
        class="h-10 bg-gray-200 w-20 border border-gray-300 loading-shimmer rounded-r-md"
      />
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-2 gap-6"
  >
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse "
    >
      <div
        class="mb-4"
      >
        <div
          class="h-6 bg-gray-200 rounded w-1/3 loading-shimmer"
        />
      </div>
      <div
        class="bg-gradient-to-r from-gray-200 via-gray-100 to-gray-200 rounded-lg loading-shimmer"
        style="height: 300px;"
      >
        <div
          class="h-full flex items-end justify-around p-4 space-x-2"
        >
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 30%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 60%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 45%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 75%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 40%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 55%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 35%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 65%; width: 12px;"
          />
        </div>
      </div>
    </div>
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse "
    >
      <div
        class="mb-4"
      >
        <div
          class="h-6 bg-gray-200 rounded w-1/3 loading-shimmer"
        />
      </div>
      <div
        class="bg-gradient-to-r from-gray-200 via-gray-100 to-gray-200 rounded-lg loading-shimmer"
        style="height: 300px;"
      >
        <div
          class="h-full flex items-end justify-around p-4 space-x-2"
        >
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 30%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 60%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 45%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 75%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 40%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 55%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 35%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 65%; width: 12px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="animate-pulse"
  >
    <div
      class="bg-white rounded-lg shadow p-6 animate-pulse "
    >
      <div
        class="mb-4"
      >
        <div
          class="h-6 bg-gray-200 rounded w-1/3 loading-shimmer"
        />
      </div>
      <div
        class="bg-gradient-to-r from-gray-200 via-gray-100 to-gray-200 rounded-lg loading-shimmer"
        style="height: 300px;"
      >
        <div
          class="h-full flex items-end justify-around p-4 space-x-2"
        >
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 30%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 60%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 45%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 75%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 40%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 55%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 35%; width: 12px;"
          />
          <div
            class="bg-gray-300 rounded-t animate-pulse"
            style="height: 65%; width: 12px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="bg-white rounded-lg shadow animate-pulse"
      >
        <div
          class="px-6 py-4 border-b border-gray-200"
        >
          <div
            class="h-6 bg-gray-200 rounded w-48 loading-shimmer"
          />
        </div>
        <div
          class="p-6 space-y-4"
        >
          <div
            class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
              />
              <div
                class="h-3 bg-gray-200 rounded w-1/2 loading-shimmer"
              />
            </div>
            <div
              class="h-6 bg-gray-200 rounded-full w-16 loading-shimmer"
            />
          </div>
          <div
            class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
              />
              <div
                class="h-3 bg-gray-200 rounded w-1/2 loading-shimmer"
              />
            </div>
            <div
              class="h-6 bg-gray-200 rounded-full w-16 loading-shimmer"
            />
          </div>
          <div
            class="flex items-center justify-between p-3 bg-gray-50 rounded-lg"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="h-4 bg-gray-200 rounded w-3/4 loading-shimmer"
              />
              <div
                class="h-3 bg-gray-200 rounded w-1/2 loading-shimmer"
              />
            </div>
            <div
              class="h-6 bg-gray-200 rounded-full w-16 loading-shimmer"
            />
          </div>
          <div
            class="pt-4 border-t border-gray-200"
          >
            <div
              class="h-4 bg-gray-200 rounded w-40 loading-shimmer"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="bg-white rounded-lg shadow animate-pulse"
      >
        <div
          class="px-6 py-4 border-b border-gray-200"
        >
          <div
            class="h-6 bg-gray-200 rounded w-20 loading-shimmer"
          />
        </div>
        <div
          class="p-6 space-y-4"
        >
          <div
            class="bg-blue-50 border border-blue-200 rounded-lg p-4 animate-pulse "
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-6 h-6 bg-gray-200 rounded-full flex-shrink-0 loading-shimmer"
              />
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="h-4 bg-gray-200 rounded w-full loading-shimmer"
                />
                <div
                  class="h-3 bg-gray-200 rounded w-3/4 loading-shimmer"
                />
              </div>
            </div>
          </div>
          <div
            class="bg-blue-50 border border-blue-200 rounded-lg p-4 animate-pulse "
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-6 h-6 bg-gray-200 rounded-full flex-shrink-0 loading-shimmer"
              />
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="h-4 bg-gray-200 rounded w-full loading-shimmer"
                />
                <div
                  class="h-3 bg-gray-200 rounded w-3/4 loading-shimmer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
